tests/error/no_member.gw
#! [contains] does not have members - invalid use in dot expression
int i;
i.nothing;	

